音声モジュールのWin10化対応 #1

--- a/Tetris/Tetris.csproj
+++ b/Tetris/Tetris.csproj
@@ -48,10 +48,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.DirectX.AudioVideoPlayback, Version=1.0.2902.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Windows\Microsoft.NET\DirectX for Managed Code\1.0.2902.0\Microsoft.DirectX.AudioVideoPlayback.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="PresentationCore" />
     <Reference Include="Smart.Navigation">
@@ -94,6 +90,7 @@
     </Compile>
     <Compile Include="IApplicationView.cs" />
     <Compile Include="Models\Data\RecordData.cs" />
+    <Compile Include="Models\Sound\Audio.cs" />
     <Compile Include="Models\Sound\Sound.cs" />
     <Compile Include="Models\Blocks\TetrominoType.cs" />
     <Compile Include="Models\Blocks\Model.cs" />
